[package]
name = "ark-bn254-r0"
version = "0.1.0"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/std", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }

[features]
default = [ "curve" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]
curve = [ "scalar_field" ]
scalar_field = []
